odinrecipe.css
*{
    line-height: 1;
}
body {
background-color: #151617;
}

h1{
    color: aqua;
    font-size: 40px;
}

a{
    color: aqua;
    font-size: 30px;
}

li{
    list-style-type: "\1F33F";
}

div{
    color: aqua;
    font-size: 30px;
}
p{
    color: rgb(226, 80, 43);
    font-size: 25px;
}

